Working instrumentation