@@ -1,8 +1,11 @@
+//ext {
+//  minJavaVersionForTests = JavaVersion.VERSION_17
+//}
 muzzle {
   pass {
     group = "org.apache.kafka"
     module = "kafka-clients"
-    versions = "[3.1.0,)"
+    versions = "[3.8.0,)"
     assertInverse = false
   }
 }
@@ -10,19 +13,41 @@ muzzle {
 apply from: "$rootDir/gradle/java.gradle"
 
 addTestSuite('latestDepTest')
-addTestSuite('iastLatestDepTest3')
-
 
 java {
   toolchain {
     languageVersion.set(JavaLanguageVersion.of(17))
   }
 }
-dependencies {
-  compileOnly group: 'org.apache.kafka', name: 'kafka-clients', version: '3.1.0'
-  implementation project(':dd-java-agent:instrumentation:kafka-common')
 
-  testImplementation group: 'org.apache.kafka', name: 'kafka-clients', version: '3.1.0'
+
+project.afterEvaluate {
+  tasks.withType(Test).configureEach {
+    if (javaLauncher.get().metadata.languageVersion.asInt() >= 16) {
+      jvmArgs += ['--add-opens', 'java.base/java.util=ALL-UNNAMED']
+    }
+  }
+}
+//[compileMain_java17Java, compileTestJava, compileLatestDepTestJava].each {
+//  it.configure {
+//    setJavaVersion(it, 17)
+//    sourceCompatibility = JavaVersion.VERSION_1_8
+//    targetCompatibility = JavaVersion.VERSION_1_8
+//  }
+//}
+
+tasks.withType(GroovyCompile) {
+  javaLauncher = getJavaLauncherFor(17)
+  groovyOptions.setParameters(true)
+}
+
+dependencies {
+  compileOnly group: 'org.apache.kafka', name: 'kafka-clients', version: '3.8.0'
+  //  main_java17CompileOnly group: 'org.apache.kafka', name: 'kafka-clients', version: '3.1.0'
+  implementation project(':dd-java-agent:instrumentation:kafka-common')
+  //  main_java17Implementation project(':dd-java-agent:instrumentation:kafka-common')
+
+  testImplementation group: 'org.apache.kafka', name: 'kafka-clients', version: '3.8.0'
   testImplementation group: 'org.springframework.kafka', name: 'spring-kafka', version: '3.1.0'
   testImplementation group: 'org.springframework.kafka', name: 'spring-kafka-test', version: '3.1.0'
   testImplementation group: 'org.testcontainers', name: 'kafka', version: '1.17.0'
@@ -31,13 +56,6 @@ dependencies {
   testImplementation group: 'org.mockito', name: 'mockito-core', version: '2.19.0'
   testRuntimeOnly project(':dd-java-agent:instrumentation:spring-scheduling-3.1')
   testImplementation(testFixtures(project(':dd-java-agent:agent-iast')))
-
-  //IAST
-  testRuntimeOnly project(':dd-java-agent:instrumentation:iast-instrumenter')
-  testRuntimeOnly project(':dd-java-agent:instrumentation:java-lang')
-  testRuntimeOnly project(':dd-java-agent:instrumentation:java-io')
-  testRuntimeOnly project(':dd-java-agent:instrumentation:jackson-core')
-  testImplementation(group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.10')
 
 
   // Include latest version of kafka itself along with latest version of client libs.
